tests_bucklescript/__snapshots__/Error_Template_missingField_re.367bc10c.0.snapshot
Error Template › missingField1.re › output
File \"tests_bucklescript/operations/errors/missingField1.re\", line 6, characters 6-27:
6 |       thisFieldDoesNotExist
          ^^^^^^^^^^^^^^^^^^^^^
Error: Unknown field 'thisFieldDoesNotExist' on type CustomScalarObject

  We've found a bug for you!
  /Users/Jaap/Documents/development/graphql-ppx/tests_bucklescript/operations/errors/missingField1.re
  
  Error while running external preprocessor
